--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -134,17 +134,16 @@
         <div class="main-container" >
             <div class="container2" id="text-info">
                 <h1>Olympiastadion</h1>
-                <p><br>Verein: FC Bayern München<br><br>
-                    Stadt: München<br><br>
-                    Kapazität: 0<br><br>
-                    Eröffnung: 1850<br><br>
-                    Größe?</p>
+                <p><br>Verein: Hertha BSC<br><br>
+                    Stadt: Berlin<br><br>
+                    Kapazität: 74.475<br><br>
+                    Eröffnung: 1936<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/berlin-stadion-außen.webp">
             </div>
             <div class="container2" id="text-ganz">
-                <p>Hallo</p>
+                <p>Das Olympiastadion in Berlin, erbaut für die Olympischen Spiele 1936, ist heute eine der bekanntesten Sportstätten Deutschlands. Im Bezirk Charlottenburg-Wilmersdorf gelegen, wurde es zwischen 2000 und 2004 umfassend modernisiert. Mit einer Kapazität von rund 74.475 Zuschauern und modernen Einrichtungen bietet es Platz für Heimspiele von Hertha BSC, das jährliche DFB-Pokal-Finale, Leichtathletikveranstaltungen und große Konzerte. Das Stadion, im Besitz des Landes Berlin und betrieben von der Olympiastadion Berlin GmbH, war auch Austragungsort des WM-Finales 2006 und des UEFA Champions League Finales 2015. Ein bedeutendes DFB-Länderspiel fand am 22. März 2018 statt, als Deutschland gegen Brasilien mit 0:1 verlor.</p>
             </div>
         </div>  
     </div>
@@ -155,9 +154,8 @@
                 <h1>Allianz Arena</h1>
                 <p><br>Verein: FC Bayern München<br><br>
                     Stadt: München<br><br>
-                    Kapazität: 0<br><br>
-                    Eröffnung: 1850<br><br>
-                    Größe?</p>
+                    Kapazität: 75.000<br><br>
+                    Eröffnung: 2005<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/bayern-stadion-außen.jpeg">
@@ -170,126 +168,122 @@
     <div class="container" id="dortmund">
         <div class="main-container" >
             <div class="container2" id="text-info">
-                <h1>Olympiastadion</h1>
-                <p><br>Verein: FC Bayern München<br><br>
-                    Stadt: München<br><br>
-                    Kapazität: 0<br><br>
-                    Eröffnung: 1850<br><br>
-                    Größe?</p>
+                <h1>Signal Iduna Park</h1>
+                <p><br>Borussia Dortmund<br><br>
+                    Stadt: Dortmund<br><br>
+                    Kapazität: 81.000<br><br>
+                    Eröffnung: 1974<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/dortmund-stadion-außen.jpg">
             </div>
             <div class="container2" id="text-ganz">
-                <p>Hallo</p>
+                <p>Der Signal Iduna Park, auch bekannt als Westfalenstadion, wurde 1974 eröffnet und ist die Heimat von Borussia Dortmund. Mit einer Kapazität von über 81.000 Plätzen ist es das größte Stadion Deutschlands. Besonders berühmt ist die "Gelbe Wand" auf der Südtribüne, die größte Stehplatztribüne Europas, die für eine einzigartige und beeindruckende Atmosphäre sorgt. Die moderne Infrastruktur und die traditionsreiche Geschichte machen den Signal Iduna Park zu einem der bedeutendsten Fußballstadien der Welt. Ein denkwürdiges Länderspiel fand am 4. März 2009 hier statt, als Deutschland gegen Italien spielte und das Spiel mit einem 1:1-Unentschieden endete.</p>
             </div>
         </div>  
     </div>
     <div class="container" id="hamburg">
         <div class="main-container" >
             <div class="container2" id="text-info">
-                <h1>Olympiastadion</h1>
-                <p><br>Verein: FC Bayern München<br><br>
-                    Stadt: München<br><br>
-                    Kapazität: 0<br><br>
-                    Eröffnung: 1850<br><br>
-                    Größe?</p>
+                <h1>Volksparkstadion</h1>
+                <p><br>Verein: Hamburger SV<br><br>
+                    Stadt: Hamburg<br><br>
+                    Kapazität: 57.000<br><br>
+                    Eröffnung: 1953<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/hamburg-stadion-außen.jpg">
             </div>
             <div class="container2" id="text-ganz">
-                <p>Hallo</p>
+                <p>Das Volksparkstadion in Hamburg wurde 1953 eröffnet und seither mehrfach modernisiert. Es bietet Platz für über 57.000 Zuschauer und ist die Heimat des Hamburger SV. Das Stadion ist bekannt für seine markanten Dächer und seine großartige Akustik, die eine leidenschaftliche Atmosphäre schafft. Es dient nicht nur als Fußballstadion, sondern auch als Veranstaltungsort für Konzerte und andere Großereignisse. Am 2. September 2011 war das Volksparkstadion Schauplatz des EM-Qualifikationsspiels Deutschland gegen Österreich, bei dem Deutschland mit 6:2 siegte.
+
+</p>
             </div>
         </div>  
     </div>
     <div class="container" id="frankfurt">
         <div class="main-container" >
             <div class="container2" id="text-info">
-                <h1>Olympiastadion</h1>
-                <p><br>Verein: FC Bayern München<br><br>
-                    Stadt: München<br><br>
-                    Kapazität: 0<br><br>
-                    Eröffnung: 1850<br><br>
-                    Größe?</p>
+                <h1>Deutsche Bank Park</h1>
+                <p><br>Verein: Eintracht Frankfurt<br><br>
+                    Stadt: Frankfurt<br><br>
+                    Kapazität: 51.500<br><br>
+                    Eröffnung: 1925<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/frankfurt-stadion-außen.jpg">
             </div>
             <div class="container2" id="text-ganz">
-                <p>Hallo</p>
+                <p>Der Deutsche Bank Park in Frankfurt am Main, früher als Waldstadion bekannt, ist die Heimat von Eintracht Frankfurt und ein wichtiger Austragungsort für Sport- und Kulturveranstaltungen. Eröffnet 1925 und zuletzt umfassend zwischen 2002 und 2005 modernisiert, bietet das Stadion Platz für etwa 51.500 Zuschauer bei Bundesliga-Spielen. Es verfügt über moderne Technik, VIP-Logen und umfangreiche gastronomische Angebote. Das Stadion, im Besitz der Stadt Frankfurt und betrieben von der Stadion Frankfurt Management GmbH, war ein wichtiger Austragungsort der FIFA-Weltmeisterschaft 2006 und wird auch bei der Fußball-Europameisterschaft 2024 genutzt. Ein bedeutendes DFB-Länderspiel fand am 9. Oktober 2019 statt, als Deutschland gegen Argentinien 2:2 unentschieden spielte.</p>
             </div>
         </div>  
     </div>
     <div class="container" id="gelsenkirchen">
         <div class="main-container" >
             <div class="container2" id="text-info">
-                <h1>Olympiastadion</h1>
-                <p><br>Verein: FC Bayern München<br><br>
-                    Stadt: München<br><br>
-                    Kapazität: 0<br><br>
-                    Eröffnung: 1850<br><br>
-                    Größe?</p>
+                <h1>Veltins-Arena</h1>
+                <p><br>Verein: FC Schalke 04<br><br>
+                    Stadt: Gelsenkrichen<br><br>
+                    Kapazität: 62.000<br><br>
+                    Eröffnung: 2001<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/gelsenkirchen-stadion-außen.jpg">
             </div>
             <div class="container2" id="text-ganz">
-                <p>Hallo</p>
+                <p>Die Veltins-Arena, eröffnet 2001, ist das Zuhause des FC Schalke 04 und bietet Platz für über 62.000 Zuschauer. Mit ihrem einziehbaren Dach und Rasen gehört sie zu den modernsten Arenen Europas. Sie ist nicht nur für Fußballspiele, sondern auch für zahlreiche andere Veranstaltungen wie Konzerte und Eishockeyspiele bekannt. Ein historisches Ereignis war das WM-Halbfinale am 4. Juli 2006 zwischen Deutschland und Italien, das in der Verlängerung mit 0:2 endete.
+
+</p>
             </div>
         </div>  
     </div>
     <div class="container" id="leipzig">
         <div class="main-container" >
             <div class="container2" id="text-info">
-                <h1>Olympiastadion</h1>
-                <p><br>Verein: FC Bayern München<br><br>
-                    Stadt: München<br><br>
-                    Kapazität: 0<br><br>
-                    Eröffnung: 1850<br><br>
-                    Größe?</p>
+                <h1>Red Bull Arena</h1>
+                <p><br>Verein: RB Leipzig<br><br>
+                    Stadt: Leipzig<br><br>
+                    Kapazität: 42.000<br><br>
+                    Eröffnung: 2004<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/leipzig-stadion-außen.jpg">
             </div>
             <div class="container2" id="text-ganz">
-                <p>Hallo</p>
+                <p>Die Red Bull Arena in Leipzig wurde 2004 eröffnet und ist die Heimat von RB Leipzig. Sie bietet Platz für über 42.000 Zuschauer und ist bekannt für ihre moderne Architektur und lebhafte Atmosphäre. Die Arena wurde auf den Fundamenten des ehemaligen Zentralstadions errichtet und verbindet Tradition mit Moderne. Am 27. März 2018 fand hier das Freundschaftsspiel Deutschland gegen Brasilien statt, das Deutschland mit 1:0 gewann.</p>
             </div>
         </div>  
     </div>
     <div class="container" id="düsseldorf">
         <div class="main-container" >
             <div class="container2" id="text-info">
-                <h1>Olympiastadion</h1>
-                <p><br>Verein: FC Bayern München<br><br>
-                    Stadt: München<br><br>
-                    Kapazität: 0<br><br>
-                    Eröffnung: 1850<br><br>
-                    Größe?</p>
+                <h1>Merkur Spiel-Arena</h1>
+                <p><br>Verein: Fortuna Düsseldorf<br><br>
+                    Stadt: Düsseldorf<br><br>
+                    Kapazität: 54.000<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/düsseldorf-stadion-außen.jpg">
             </div>
             <div class="container2" id="text-ganz">
-                <p>Hallo</p>
+                <p>Die Merkur Spiel-Arena in Düsseldorf wurde 2004 eröffnet und ist die Heimat von Fortuna Düsseldorf. Mit einer Kapazität von über 54.000 Zuschauern und einem schließbaren Dach bietet sie hervorragende Bedingungen für eine Vielzahl von Veranstaltungen. Das Stadion ist nicht nur für Fußballspiele, sondern auch für Konzerte und andere Großveranstaltungen bekannt. Am 9. Oktober 2019 fand hier das Freundschaftsspiel Deutschland gegen Argentinien statt, das mit einem spannenden 2:2-Unentschieden endete.</p>
             </div>
         </div>  
     </div>
     <div class="container" id="köln">
         <div class="main-container" >
             <div class="container2" id="text-info">
-                <h1>Olympiastadion</h1>
-                <p><br>Verein: FC Bayern München<br><br>
+                <h1>RheinEnergieStadion</h1>
+                <p><br>Verein: 1. FC Köln<br><br>
                     Stadt: München<br><br>
-                    Kapazität: 0<br><br>
-                    Eröffnung: 1850<br><br>
-                    Größe?</p>
+                    Kapazität: 49.000<br><br>
+                    Eröffnung: 1923<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/köln-stadion-außen.jpg">
             </div>
             <div class="container2" id="text-ganz">
-                <p>Hallo</p>
+                <p>Das RheinEnergieStadion in Köln, Heimat des 1. FC Köln, wurde 1923 eröffnet und seither mehrfach modernisiert. Mit einer Kapazität von über 49.000 Zuschauern ist es ein wichtiger Bestandteil der Kölner Sportkultur. Das Stadion ist bekannt für seine traditionsreiche Atmosphäre und die leidenschaftlichen Fans. Am 11. Oktober 2014 war das Stadion Schauplatz des EM-Qualifikationsspiels Deutschland gegen Irland, das mit einem 1:1-Unentschieden endete.</p>
             </div>
         </div>  
     </div>
