--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -275,7 +275,7 @@
             <div class="container2" id="text-info">
                 <h1>RheinEnergieStadion</h1>
                 <p><br>Verein: 1. FC Köln<br><br>
-                    Stadt: München<br><br>
+                    Stadt: Köln<br><br>
                     Kapazität: 49.000<br><br>
                     Eröffnung: 1923<br><br>
             </div>
