--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -261,6 +261,7 @@
                 <p><br>Verein: Fortuna Düsseldorf<br><br>
                     Stadt: Düsseldorf<br><br>
                     Kapazität: 54.000<br><br>
+                    Eröffnung: 2004<br><br>
             </div>
             <div class="container2" id="text-bild">
                 <img src="assets/düsseldorf-stadion-außen.jpg">
