--- a/ws/football/src/main/resources/templates/forum.html
+++ b/ws/football/src/main/resources/templates/forum.html
@@ -7,554 +7,25 @@
         <title>Document</title>
         <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-
+        <link rel="stylesheet" href="forum.css">
     </head>
-
-    <style>
-        * {
-            font-family: "Rubik", sans-serif;
-        padding: 0;
-        margin:0;
-        box-sizing: border-box;
-  
-        background-color: black;
-    } 
-
-    body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-}
-
-    .container {
-        display: flex;
-        flex: 1;
-    }
-    
-    .header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding: 1.3rem 10%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        z-index: 100;
-        height: 110px;
-        border-style: solid;
-        border-color: #C1A875;
-        border-width: 2px;
-    }
-    
-    
-    
-    .header a {
-        width: 125px; 
-        height: 83px;
-    }
-    
-    .logo {
-        width: 100%;
-    }
-    
-    
-    .navbar {
-    display: block;
-    margin-right: 20px;
-    }
-    
-    .navbar a {
-        position: relative;
-    font-size: 1.15rem;
-    color: white;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 2.5rem;
-    transition: .50s ease;
-    font-size: 20px;
-    
-    }
-    
-    .navbar a::before {
-        padding-right: 0px;
-      content: "";
-      position: absolute;
-      display: block;
-      width: 100%;
-      height: 2px;
-      bottom: 0;
-      left: 0;
-      background-color: #C1A875;
-      transform: scaleX(0);
-      transition: transform 0.3s ease;
-    }
-    
-    .navbar a:hover::before {
-      transform: scaleX(1);
-    }
-    
-    #check {
-    display: none;
-    }
-    
-    .menu {
-    position: absolute;
-    right: 5%;
-    color: white;
-    font-size: 2rem;
-    cursor: pointer;
-    display: none;
-    }
-    
-    @media (max-width: 992px) {
-    .header {
-        padding: 1.3rem 5%;
-    }
-    }
-    
-    @media (max-width: 854px) {
-    .menu {
-        display: inline-flex;
-    }
-    #check:checked ~ .menu #icon-menu {
-    display: none;
-    }
-    .menu #close-menu {
-    display: none;
-    }
-    #check:checked ~ .menu #close-menu {
-    display: block;
-    }
-    .navbar {
-    position: absolute;
-    top: 100%;
-    left: 0%;
-    width: calc(100% + 4px);
-    margin-left: -2px;
-    height: 0;
-    background: rgb(black);
-    border-style: solid;
-    border-color: #C1A875;
-    border-width: 1px;
-    overflow: hidden;
-    transition: .2s ease;
-    }
-    #check:checked ~ .navbar {
-    height: 20rem;
-    }
-    .navbar a {
-    display: block;
-    height: 35px;
-    margin: 1.5rem auto;
-    text-align: center;
-    transition: -2s ease;
-    font-size: 20px;
-    
-    }
-    #check:checked ~ .navbar a{
-        transform: translateY(0);
-    }
-    }
-
-    .sidebar {
-        width: 25%;
-        height: 1000px;
-        border-style: solid;
-        border-color: #C1A875;
-        border-width: 2px;
-    position: fixed;
-        margin-top: 108px;
-        transition: all 0.3s;
-    }
-
-    .sidebar li {
-        height: 50px;
-        margin-top: 20px;
-        list-style: none;
-        display: flex;
-        align-items: center;
-        margin-left: 55px;
-    }
-
-    .button-18 {
-        margin-left: -10px;
-    }
-
-
-.sidebar-icon {
-    height: 30px;
-}
-
-    .sidebar li .text {
-        color: white;
-        margin-left: 35px;
-        font-size: 25px;
-    }
-
-    .sidebar li a {
-        height: 100%;
-        display: flex;
-        align-items: center;
-        text-decoration: none;
-    }
-
-
-    .sidebar li a:hover .text {
-        color: #C1A875;
-    }
-
-    .sidebar li a:hover #icon1 {
-        background-image: url("img/homefill.png");
-        background-size: cover;
-    }
-
-    .sidebar li a:hover #icon2 {
-        background-image: url("img/Angesagtfill.png");
-        background-size: cover;
-    }
-
-    .sidebar li a:hover #icon3 {
-        background-image: url("img/icon-uhr-fill.png");
-        background-size: cover;
-    }
-
-    .sidebar li a:hover #icon4 {
-        background-image: url("img/icon-topic-fill.png");
-        background-size: cover;
-    }
-
-
-    .strich {
-        background-color: #FF0000;
-        width: 80%;
-  height: 2px;
-  margin: 0 auto;
-margin-top: 20px;
-  position: relative;
-  opacity: 0.5;
-
-    }
-    
-
-
-    #check2 {
-    display: none;
-    }
-
-
-
-    .sidebar-menu {
-
-    margin-left: 55px;
-    margin-top: 25px;
-    color: white;
-    font-size: 2rem;
-    cursor: pointer;
-        display: none;
-    }
-
-    .sidebar input[type="checkbox"]:checked ~ .menu-block {
-    display: block;
-}
-
-    @media (max-width: 1100px) {
-    .sidebar-menu {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 0px;
-    }
-    .sidebar li .text {
-        display: none
-    }
-    .sidebar li {
-        display: block;
-        justify-content: center;
-        align-items: center;
-        margin-left: 33px;
-        margin-top: 10px;
-    }
-    #check2:checked ~ .sidebar-menu #icon-menu2 {
-    display: none;
-    }
-    .sidebar-menu #close-menu2 {
-    display: none;
-    }
-    #check2:checked ~ .sidebar-menu #close-menu2 {
-    display: block;
-    }
-    #check2:checked ~ .sidebar {
-    width: 20rem;
-    }
-
-    .sidebar input[type="checkbox"]:checked ~ .menu-block .nav-text {
-        display: inline;
-
-    }
-   
-}
-
-.main {
-    width: 75%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1em;
-    background-color: black;
-    margin-left: 25%;
-    margin-top: 110px;
-}
-
-@media (max-width: 1100px) {
-    .main {
-        margin-left: 100px;
-        width: calc(100% - 100px);
-    }
-}
-
-.commentsection {
-    text-align: center;
-    width: 60%;
-    height: 100vh;
-    background-color: rgb(10, 10, 10);
-    border: 1px solid rgba(80, 80, 80, 0.5);
-
-}
-
-.button-18 {
-  align-items: center;
-  background-color:#C1A875;
-  border: 0;
-  border-radius: 100px;
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-flex;
-margin-top: 35px;
-  font-size: 25px;
-  font-weight: 600;
-  justify-content: center;
-  line-height: 20px;
-  width: 80%;
-  min-height: 50px;
-  
-  overflow: hidden;
-  padding: 0px;
-  
-  text-align: center;
-  touch-action: manipulation;
-  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
-}
-
-.button-18:hover,
-.button-18:focus { 
-  background-color: #8d7950;
-  color: #ffffff;
-}
-
-.popup .overlay {
-    position: fixed;
-      top: 0px;
-      left: 0px;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(201, 201, 201, 0.5);
-      opacity: 0.5;
-      z-index: 1;
-      display: none;
-  }
-  .popup .content {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(0);
-      background: black;
-      width: 550px;
-      height: 290px;
-      z-index: 2;
-      text-align: center;  
-      padding: 20px; 
-      box-sizing: border-box; 
-      border-radius: 18px;
-  }
-  .popup .close-btn {
-      cursor: pointer;
-      position: absolute;
-      left: 20px;
-      top: 20px;
-      width: 30px;
-      height: 30px;
-      color: #fff;
-      font-size: 25px;
-      font-weight: 600;
-      line-height: 30px;
-      text-align: center;
-      border-radius: 50%;
-  }
-  .popup.active .overlay {
-      display: block;
-  }
-  .popup.active .content {
-      transition: all 300ms ease-in-out;
-  transform: translate(-50%, -50%) scale(1);
-  }
- .popup .commentbox {
-    display: flex;
-    padding: 3px;
-    margin-top: 50px;
- }
- .popup .commentbox .userimage {
-    width: 50px;
- }
- .popup .commentbox .userimage {
-width: 45px;
-border-radius: 50%;
-object-fit: cover;
-object-position: center;
- }
-.popup .commentinput {
-    width: 100%;
-}
-.popup .commentinput > textarea {
-    display: flex;
-    border: none;
-    padding: 10px;
-    padding-left: 20px;
-    outline: none;
-    width: 100%;
-    height: 150px;
-    font-size: 22px;
-    color: white;
-    overflow: auto;
-    resize: none;
-}
-.popup .bottomsection {
-    display: flex;
-    height: 50px;
-    margin-top: 5px;
-    border-top: 1px solid lightgrey;;
-}
-.popup .bottomsection .icons {
-    width: 70%;
-    display: flex;
-}
-.popup .bottomsection .icons button {
-    border: none;
-    cursor: pointer;
-    appearance: none;
-    background-color: inherit;
-}
-.popup .bottomsection img {
-    margin-top: 14px;
-    width: 27px;
-    height: 27px;
-
-}
-
-.popup .bottomsection .post-button {
-    width: 30%;
-}
-.popup .bottomsection .button-18 {
-    margin-top: 10px;
-    margin-left: 50px;
-    align-items: center;
-    min-height: 35px;
-    width: 90px;
-    font-size: 18px;
-}
-
-#imageOutput {
-   /* display: flex;
-    flex-direction: column;
-    align-items: flex-start; */
-    max-width: 100%; /* Sicherstellen, dass das Bild nicht den Container überläuft */
-    height: auto;
-    position: relative;
-}
-
-.popup .commentbox img {
-    max-width: 100%;
-    max-height: 400px;
-    border-radius: 18px;
-}
-.popup .commentbox img.portrait {
-    width: auto;
-    height: 100%;
-}
-.popup .commentbox img.landscape {
-    width: 100%;
-    height: auto;
-}
-#uploadMessage {
-    display: none;
-    color: #C1A875;
-    margin-top: 10px;
-}
-.close-icon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: black;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    font-size: 24px;
-    width: 27px;
-    height: 27px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    z-index: 10;
-}
-
-#uploadButton[disabled] {
-    position: relative;
-}
-
-#uploadButton[disabled]::after {
-    content: attr(data-tooltip);
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 120%; /* Tooltip unter dem Button */
-    background-color: #333;
-    color: #C1A875; /* Schriftfarbe rot */
-    padding: 5px;
-    border-radius: 5px;
-    white-space: nowrap;
-    z-index: 1000;
-    display: none;
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-#uploadButton[disabled]:hover::after {
-    display: block;
-    opacity: 1;
-}
-    </style>
 
     <body>
         <header class="header">
-            <a href="#"><img src="assets/Logo.png" class="logo"></a>
+            <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
             <input type="checkbox" id="check">
             <label for="check" class="menu">
                 <i class="bx bx-menu" id="icon-menu"></i>
                 <i class="bx bx-x" id="close-menu"></i>
             </label>    
             <nav class="navbar">
-                <a href="#">Startseite</a>
-                <a href="#">Euro 2024</a>
+                <a href="index.html">Startseite</a>
+                <a href="stadien.html">Euro 2024</a>
                 <a href="#">Ergebnisse</a>
-                <a href="#">Forum</a>
-                <a href="#">Login</a>
+                <a href="forum.html">Forum</a>
+                <a href="login.html">Login</a>
             </nav>
-        </header>
+            </header>
         <div class="container">
             <aside class="sidebar">
                     <input type="checkbox" id="check2">
@@ -642,11 +113,11 @@ object-position: center;
                                 <button id="uploadButton" title="Upload Photo">
                                     <img src="assets/popup-gallery.png" alt="Upload Image">
                                 </button>
-                                <p id="uploadMessage" style="display: none; color: red;">Es kann nur ein Foto hochgeladen werden</p>
+                                <p id="uploadMessage" style="display: none;">Es kann nur ein Foto hochgeladen werden</p>
                                 <input type="file" id="fileInput" accept="image/*" style="display:none">
                             </div>
                             <div class="post-button">
-                                <button class="button-18">Posten</button>
+                                <button class="button-18" onclick="postComment()">Posten</button>
                             </div>
                         </div>
                         <div class="close-btn" onclick="togglePopup()">&times;
@@ -654,35 +125,14 @@ object-position: center;
                     </div>
                 </div>
                 
-                
-
-
-
                 <main class="main">
                     <div class="commentsection">
                         <div class="comment">
-                            <article class="article">
-                                <div class="comment-profilepicturesection">
-                                </div>
-                                <div class="comment-mainsection">
-                                    <div class="comment-publisher">
-                                    </div>
-                                    <div class="comment-text">
-                                    </div>
-                                    <div class="comment-media">
-                                    </div>
-                                    <div class="comment-bottom">
-                                    </div>
-                                </div>
-                            </article>
+
                         </div>
                     </div>
                 </main>
             </div>     
-                
-
-
-
-                <script src="forum.js"></script>
+            <script src="forum.js"></script>
     </body>
     </html>
